updating tecnodidactic all shopping and single product archives in design and 2 functions

--- a/resources/assets/styles/components/product-card.scss
+++ b/resources/assets/styles/components/product-card.scss
@@ -19,6 +19,8 @@
         mix-blend-mode: darken;
         transition: ease-out .3s;
         object-fit: contain;
+        object-position: center;
+        height: 100%;
 
         &.empty-state {
             opacity: 0.3;
