--- a/resources/assets/styles/common/global.scss
+++ b/resources/assets/styles/common/global.scss
@@ -69,8 +69,16 @@ a {
   }
 }
 
-.navbar-item:hover{
+.navbar-item {
+  a{
+  color: $dark;
+  }
+  &:hover{
+    color: $link;
+  }
+  a:hover{
   color: $link;
+  }
 }
 
 .minibox{
