updating tecnodidactic adding sass archives and modified styles in all views, modified css and responsive

--- a/resources/assets/styles/partials/index.scss
+++ b/resources/assets/styles/partials/index.scss
@@ -5,3 +5,6 @@
 @import 'header';
 @import 'header-vertical';
 @import 'carousel';
+@import 'elegirnos';
+@import 'destacados';
+@import 'equipamiento';
