--- a/resources/assets/styles/common/global.scss
+++ b/resources/assets/styles/common/global.scss
@@ -85,6 +85,13 @@ a {
   }
 }
 
+.card{
+  box-shadow: none;
+  &:hover{
+    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
+  }
+}
+
 .carrusel-container{
   overflow: hidden;
   width: auto;
@@ -99,124 +106,19 @@ a {
   }
 }
 
-.minibox{
-  position: absolute;
-  border-radius: 50px;
-  width: 150px;
-  text-align: center;
-  &.box-1{
-    top: 23%;
-    left: 20%;
-    transform: rotate(340deg);
-    z-index: 2;
-  }
-  &.box-2{
-    right: 26%;
-    bottom: 33%;
-    transform: rotate(7deg);
-  }
-  &.box-3{
-    top: 21%;
-    left: 23%;
-    transform: rotate(7deg);
-    z-index: 2;
-  }
-  &.box-4{
-    right: 21%;
-    bottom: 34%;
-    transform: rotate(352deg);
-  }
-  &.box-1:hover{
-    scale: (1.05);
-    transition: all 0.3s;
-    transform: rotate(348deg);
-  }
-  &.box-2:hover{
-    scale: (1.05);
-    transition: all 0.3s;
-    transform: rotate(1deg);
-  }
-  &.box-3:hover{
-    scale: (1.05);
-    transition: all 0.3s;
-    transform: rotate(1deg);
-  }
-  &.box-4:hover{
-    scale: (1.05);
-    transition: all 0.3s;
-    transform: rotate(360deg);
-  }
-}
-
-.destacados{
-  .card-box{
-    min-height: 80vh;
-    .section{
-      height: 40%;
-    }
-  }
-}
-
-.equipamiento{
-  .card{
-    overflow: hidden;
-  }
-  .is-overlay{
-    position: absolute;
-    background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7));
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
-  .content{
-    z-index: 2;
-  }
-}
-
-.woocomerce-shop{
-  .woocomerce-box{
-    .woocomerce-title{
-      width: 60%; 
-      max-width: 1000px;
-      min-width: 280px;
-      margin: 0 auto;
-    }
-    .field{
-      width: 45%;
-      max-width: 1000px;
-      min-width: 280px;
-      margin: 0 auto;
-      input{
-        background-color: rgba(251, 185, 50, 1);
-      }
-      input::placeholder{
-        color: $dark;
-      }
-    }
-    .woocommerce-explorer{
-      margin: 0 auto;
-      li{
-        background-color: transparent;
-        a{
-          color: $dark;
-        }
-        &:hover{
-          background-color: $info;
-          & > a{
-            color: $light;
-          }
-        }
-      }
-    }
-  }
-}
-
 .product-card{
   figure{
     justify-content: center;
   }
+}
+
+.is-overlay{
+  position: absolute;
+  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.7));
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .woocommerce-pagination{
@@ -224,35 +126,21 @@ a {
     justify-content: center;
     li{
       a{
-        color: $info;
+        border: none!important;
+        color: $dark;
+        padding: 0.5rem 1rem !important;
+        
       }
       a:hover{
-        color: $primary;
-        background-color: $light;
+        color: $light;
+        background-color: $danger;
+        border-radius: 100%;
       }
       .current{
-        border-radius: 4px;
-        padding: calc(0.5em - 2px) calc(0.75em - 2px);
+        background-color: $danger!important;
+        border-radius: 100%;
+        padding: 0.5rem 1rem;
       }
     }
-  }
-}
-
-.cotizacion{
-  .table-products{
-    border-radius: 20px 20px 0 0;
-    box-shadow: none;
-    overflow: hidden;
-    margin-bottom: 0;
-    .input-quantity{
-      border: 1px solid $grey-lighter;
-      width: 4rem !important;
-    }
-  }
-  .table-total{
-    border: 1px solid $grey-lighter;
-    padding: 2rem;
-    border-radius: 0 0 20px 20px;
-    background-color: $light;
   }
 }
