updating tecnodidactic adding sass archives, edited styles and fixed bug javascript

--- a/resources/assets/styles/common/global.scss
+++ b/resources/assets/styles/common/global.scss
@@ -129,7 +129,8 @@ a {
         border: none!important;
         color: $dark;
         padding: 0.5rem 1rem !important;
-        
+        width: 40px;
+        justify-content: center!important;
       }
       a:hover{
         color: $light;
